releases/0.0.1/js/MQL4Parser.js
// Generated from /home/bleroux/poc/mql4js/grammar/MQL4.g4 by ANTLR 4.5.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var grammarFileName = "MQL4.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ 'null', "';'", "'#include'", "'<'", "'>'", "'#define'", 
                     "'if'", "'('", "')'", "'else'", "'{'", "'}'", "'switch'", 
                     "'while'", "'for'", "'do'", "','", "'case'", "'default'", 
                     "':'", "'struct'", "'enum'", "'='", "'&'", "'*'", "'-'", 
                     "'!'", "'~'", "'+='", "'-='", "'*='", "'/='", "'%='", 
                     "'>>='", "'<<='", "'&='", "'|='", "'^='", "'--'", "'++'", 
                     "'>>'", "'<<'", "'|'", "'^'", "'/'", "'%'", "'+'", 
                     "'>='", "'<='", "'=='", "'!='", "'&&'", "'||'", "'.'", 
                     "'?'", "'['", "']'", "'return'", "'NULL'" ];

var symbolicNames = [ 'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', "Null", "MemoryClass", "PredifinedType", 
                      "Bool", "Number", "Identifier", "String", "Date", 
                      "Char", "NotSupportedPreprocessor", "Comment", "Space", 
                      "DynaArray" ];

var ruleNames =  [ "root", "include", "define", "notSupportedPreprocessor", 
                   "statement", "operation", "forMultiExpressions", "forExpression", 
                   "switchCase", "struct", "structElement", "structInit", 
                   "enumDef", "enumInstance", "functionDecl", "functionArgument", 
                   "declaration", "declarationElement", "declarationInitialValue", 
                   "type", "expression", "indexes" ];

function MQL4Parser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

MQL4Parser.prototype = Object.create(antlr4.Parser.prototype);
MQL4Parser.prototype.constructor = MQL4Parser;

Object.defineProperty(MQL4Parser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

MQL4Parser.EOF = antlr4.Token.EOF;
MQL4Parser.T__0 = 1;
MQL4Parser.T__1 = 2;
MQL4Parser.T__2 = 3;
MQL4Parser.T__3 = 4;
MQL4Parser.T__4 = 5;
MQL4Parser.T__5 = 6;
MQL4Parser.T__6 = 7;
MQL4Parser.T__7 = 8;
MQL4Parser.T__8 = 9;
MQL4Parser.T__9 = 10;
MQL4Parser.T__10 = 11;
MQL4Parser.T__11 = 12;
MQL4Parser.T__12 = 13;
MQL4Parser.T__13 = 14;
MQL4Parser.T__14 = 15;
MQL4Parser.T__15 = 16;
MQL4Parser.T__16 = 17;
MQL4Parser.T__17 = 18;
MQL4Parser.T__18 = 19;
MQL4Parser.T__19 = 20;
MQL4Parser.T__20 = 21;
MQL4Parser.T__21 = 22;
MQL4Parser.T__22 = 23;
MQL4Parser.T__23 = 24;
MQL4Parser.T__24 = 25;
MQL4Parser.T__25 = 26;
MQL4Parser.T__26 = 27;
MQL4Parser.T__27 = 28;
MQL4Parser.T__28 = 29;
MQL4Parser.T__29 = 30;
MQL4Parser.T__30 = 31;
MQL4Parser.T__31 = 32;
MQL4Parser.T__32 = 33;
MQL4Parser.T__33 = 34;
MQL4Parser.T__34 = 35;
MQL4Parser.T__35 = 36;
MQL4Parser.T__36 = 37;
MQL4Parser.T__37 = 38;
MQL4Parser.T__38 = 39;
MQL4Parser.T__39 = 40;
MQL4Parser.T__40 = 41;
MQL4Parser.T__41 = 42;
MQL4Parser.T__42 = 43;
MQL4Parser.T__43 = 44;
MQL4Parser.T__44 = 45;
MQL4Parser.T__45 = 46;
MQL4Parser.T__46 = 47;
MQL4Parser.T__47 = 48;
MQL4Parser.T__48 = 49;
MQL4Parser.T__49 = 50;
MQL4Parser.T__50 = 51;
MQL4Parser.T__51 = 52;
MQL4Parser.T__52 = 53;
MQL4Parser.T__53 = 54;
MQL4Parser.T__54 = 55;
MQL4Parser.T__55 = 56;
MQL4Parser.T__56 = 57;
MQL4Parser.Null = 58;
MQL4Parser.MemoryClass = 59;
MQL4Parser.PredifinedType = 60;
MQL4Parser.Bool = 61;
MQL4Parser.Number = 62;
MQL4Parser.Identifier = 63;
MQL4Parser.String = 64;
MQL4Parser.Date = 65;
MQL4Parser.Char = 66;
MQL4Parser.NotSupportedPreprocessor = 67;
MQL4Parser.Comment = 68;
MQL4Parser.Space = 69;
MQL4Parser.DynaArray = 70;

MQL4Parser.RULE_root = 0;
MQL4Parser.RULE_include = 1;
MQL4Parser.RULE_define = 2;
MQL4Parser.RULE_notSupportedPreprocessor = 3;
MQL4Parser.RULE_statement = 4;
MQL4Parser.RULE_operation = 5;
MQL4Parser.RULE_forMultiExpressions = 6;
MQL4Parser.RULE_forExpression = 7;
MQL4Parser.RULE_switchCase = 8;
MQL4Parser.RULE_struct = 9;
MQL4Parser.RULE_structElement = 10;
MQL4Parser.RULE_structInit = 11;
MQL4Parser.RULE_enumDef = 12;
MQL4Parser.RULE_enumInstance = 13;
MQL4Parser.RULE_functionDecl = 14;
MQL4Parser.RULE_functionArgument = 15;
MQL4Parser.RULE_declaration = 16;
MQL4Parser.RULE_declarationElement = 17;
MQL4Parser.RULE_declarationInitialValue = 18;
MQL4Parser.RULE_type = 19;
MQL4Parser.RULE_expression = 20;
MQL4Parser.RULE_indexes = 21;

function RootContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MQL4Parser.RULE_root;
    return this;
}

RootContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RootContext.prototype.constructor = RootContext;

RootContext.prototype.include = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(IncludeContext);
    } else {
        return this.getTypedRuleContext(IncludeContext,i);
    }
};

RootContext.prototype.define = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(DefineContext);
    } else {
        return this.getTypedRuleContext(DefineContext,i);
    }
};

RootContext.prototype.notSupportedPreprocessor = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(NotSupportedPreprocessorContext);
    } else {
        return this.getTypedRuleContext(NotSupportedPreprocessorContext,i);
    }
};

RootContext.prototype.declaration = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(DeclarationContext);
    } else {
        return this.getTypedRuleContext(DeclarationContext,i);
    }
};

RootContext.prototype.enumDef = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(EnumDefContext);
    } else {
        return this.getTypedRuleContext(EnumDefContext,i);
    }
};

RootContext.prototype.functionDecl = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FunctionDeclContext);
    } else {
        return this.getTypedRuleContext(FunctionDeclContext,i);
    }
};

RootContext.prototype.struct = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StructContext);
    } else {
        return this.getTypedRuleContext(StructContext,i);
    }
};




MQL4Parser.RootContext = RootContext;

MQL4Parser.prototype.root = function() {

    var localctx = new RootContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, MQL4Parser.RULE_root);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 55;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << MQL4Parser.T__1) | (1 << MQL4Parser.T__4) | (1 << MQL4Parser.T__19) | (1 << MQL4Parser.T__20))) !== 0) || ((((_la - 59)) & ~0x1f) == 0 && ((1 << (_la - 59)) & ((1 << (MQL4Parser.MemoryClass - 59)) | (1 << (MQL4Parser.PredifinedType - 59)) | (1 << (MQL4Parser.Identifier - 59)) | (1 << (MQL4Parser.NotSupportedPreprocessor - 59)))) !== 0)) {
            this.state = 53;
            var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
            switch(la_) {
            case 1:
                this.state = 44;
                this.include();
                break;

            case 2:
                this.state = 45;
                this.define();
                break;

            case 3:
                this.state = 46;
                this.notSupportedPreprocessor();
                break;

            case 4:
                this.state = 47;
                this.declaration();
                this.state = 48;
                this.match(MQL4Parser.T__0);
                break;

            case 5:
                this.state = 50;
                this.enumDef();
                break;

            case 6:
                this.state = 51;
                this.functionDecl();
                break;

            case 7:
                this.state = 52;
                this.struct();
                break;

            }
            this.state = 57;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function IncludeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MQL4Parser.RULE_include;
    this.filename = null; // Token
    return this;
}

IncludeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IncludeContext.prototype.constructor = IncludeContext;

IncludeContext.prototype.String = function() {
    return this.getToken(MQL4Parser.String, 0);
};

IncludeContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};




MQL4Parser.IncludeContext = IncludeContext;

MQL4Parser.prototype.include = function() {

    var localctx = new IncludeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, MQL4Parser.RULE_include);
    try {
        this.state = 65;
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 58;
            this.match(MQL4Parser.T__1);
            this.state = 59;
            localctx.filename = this.match(MQL4Parser.String);
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 60;
            this.match(MQL4Parser.T__1);
            this.state = 61;
            this.match(MQL4Parser.T__2);
            this.state = 62;
            this.expression(0);
            this.state = 63;
            this.match(MQL4Parser.T__3);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DefineContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MQL4Parser.RULE_define;
    this.name = null; // Token
    this.value = null; // ExpressionContext
    return this;
}

DefineContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DefineContext.prototype.constructor = DefineContext;

DefineContext.prototype.Identifier = function() {
    return this.getToken(MQL4Parser.Identifier, 0);
};

DefineContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};




MQL4Parser.DefineContext = DefineContext;

MQL4Parser.prototype.define = function() {

    var localctx = new DefineContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, MQL4Parser.RULE_define);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 67;
        this.match(MQL4Parser.T__4);
        this.state = 68;
        localctx.name = this.match(MQL4Parser.Identifier);
        this.state = 69;
        localctx.value = this.expression(0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function NotSupportedPreprocessorContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MQL4Parser.RULE_notSupportedPreprocessor;
    return this;
}

NotSupportedPreprocessorContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
NotSupportedPreprocessorContext.prototype.constructor = NotSupportedPreprocessorContext;

NotSupportedPreprocessorContext.prototype.NotSupportedPreprocessor = function() {
    return this.getToken(MQL4Parser.NotSupportedPreprocessor, 0);
};




MQL4Parser.NotSupportedPreprocessorContext = NotSupportedPreprocessorContext;

MQL4Parser.prototype.notSupportedPreprocessor = function() {

    var localctx = new NotSupportedPreprocessorContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, MQL4Parser.RULE_notSupportedPreprocessor);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 71;
        this.match(MQL4Parser.NotSupportedPreprocessor);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MQL4Parser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.declaration = function() {
    return this.getTypedRuleContext(DeclarationContext,0);
};

StatementContext.prototype.operation = function() {
    return this.getTypedRuleContext(OperationContext,0);
};

StatementContext.prototype.include = function() {
    return this.getTypedRuleContext(IncludeContext,0);
};

StatementContext.prototype.define = function() {
    return this.getTypedRuleContext(DefineContext,0);
};

StatementContext.prototype.notSupportedPreprocessor = function() {
    return this.getTypedRuleContext(NotSupportedPreprocessorContext,0);
};




MQL4Parser.StatementContext = StatementContext;

MQL4Parser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, MQL4Parser.RULE_statement);
    try {
        this.state = 80;
        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 73;
            this.declaration();
            this.state = 74;
            this.match(MQL4Parser.T__0);
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 76;
            this.operation();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 77;
            this.include();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 78;
            this.define();
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 79;
            this.notSupportedPreprocessor();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function OperationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MQL4Parser.RULE_operation;
    return this;
}

OperationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
OperationContext.prototype.constructor = OperationContext;


 
OperationContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function IfElseOperationContext(parser, ctx) {
	OperationContext.call(this, parser);
    this.condition = null; // ExpressionContext;
    this.opTrue = null; // OperationContext;
    this.opFalse = null; // OperationContext;
    OperationContext.prototype.copyFrom.call(this, ctx);
    return this;
}

IfElseOperationContext.prototype = Object.create(OperationContext.prototype);
IfElseOperationContext.prototype.constructor = IfElseOperationContext;

MQL4Parser.IfElseOperationContext = IfElseOperationContext;

IfElseOperationContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

IfElseOperationContext.prototype.operation = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(OperationContext);
    } else {
        return this.getTypedRuleContext(OperationContext,i);
    }
};

function BlockOperationContext(parser, ctx) {
	OperationContext.call(this, parser);
    OperationContext.prototype.copyFrom.call(this, ctx);
    return this;
}

BlockOperationContext.prototype = Object.create(OperationContext.prototype);
BlockOperationContext.prototype.constructor = BlockOperationContext;

MQL4Parser.BlockOperationContext = BlockOperationContext;

BlockOperationContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

function ForOperationContext(parser, ctx) {
	OperationContext.call(this, parser);
    this.init = null; // ForMultiExpressionsContext;
    this.term = null; // ForMultiExpressionsContext;
    this.inc = null; // ForMultiExpressionsContext;
    this.operator = null; // OperationContext;
    OperationContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ForOperationContext.prototype = Object.create(OperationContext.prototype);
ForOperationContext.prototype.constructor = ForOperationContext;

MQL4Parser.ForOperationContext = ForOperationContext;

ForOperationContext.prototype.operation = function() {
    return this.getTypedRuleContext(OperationContext,0);
};

ForOperationContext.prototype.forMultiExpressions = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ForMultiExpressionsContext);
    } else {
        return this.getTypedRuleContext(ForMultiExpressionsContext,i);
    }
};

function WhileOperationContext(parser, ctx) {
	OperationContext.call(this, parser);
    OperationContext.prototype.copyFrom.call(this, ctx);
    return this;
}

WhileOperationContext.prototype = Object.create(OperationContext.prototype);
WhileOperationContext.prototype.constructor = WhileOperationContext;

MQL4Parser.WhileOperationContext = WhileOperationContext;

WhileOperationContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

WhileOperationContext.prototype.operation = function() {
    return this.getTypedRuleContext(OperationContext,0);
};

function DoWhileOperationContext(parser, ctx) {
	OperationContext.call(this, parser);
    this.operator = null; // OperationContext;
    this.condition = null; // ExpressionContext;
    OperationContext.prototype.copyFrom.call(this, ctx);
    return this;
}

DoWhileOperationContext.prototype = Object.create(OperationContext.prototype);
DoWhileOperationContext.prototype.constructor = DoWhileOperationContext;

MQL4Parser.DoWhileOperationContext = DoWhileOperationContext;

DoWhileOperationContext.prototype.operation = function() {
    return this.getTypedRuleContext(OperationContext,0);
};

DoWhileOperationContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

function ExpressionOperationContext(parser, ctx) {
	OperationContext.call(this, parser);
    OperationContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ExpressionOperationContext.prototype = Object.create(OperationContext.prototype);
ExpressionOperationContext.prototype.constructor = ExpressionOperationContext;

MQL4Parser.ExpressionOperationContext = ExpressionOperationContext;

ExpressionOperationContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

function SwitchOperationContext(parser, ctx) {
	OperationContext.call(this, parser);
    this.leftCondition = null; // ExpressionContext;
    OperationContext.prototype.copyFrom.call(this, ctx);
    return this;
}

SwitchOperationContext.prototype = Object.create(OperationContext.prototype);
SwitchOperationContext.prototype.constructor = SwitchOperationContext;

MQL4Parser.SwitchOperationContext = SwitchOperationContext;

SwitchOperationContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

SwitchOperationContext.prototype.switchCase = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SwitchCaseContext);
    } else {
        return this.getTypedRuleContext(SwitchCaseContext,i);
    }
};


MQL4Parser.OperationContext = OperationContext;

MQL4Parser.prototype.operation = function() {

    var localctx = new OperationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, MQL4Parser.RULE_operation);
    var _la = 0; // Token type
    try {
        this.state = 142;
        switch(this._input.LA(1)) {
        case MQL4Parser.T__6:
        case MQL4Parser.T__24:
        case MQL4Parser.T__25:
        case MQL4Parser.T__26:
        case MQL4Parser.T__37:
        case MQL4Parser.T__38:
        case MQL4Parser.T__56:
        case MQL4Parser.Null:
        case MQL4Parser.Bool:
        case MQL4Parser.Number:
        case MQL4Parser.Identifier:
        case MQL4Parser.String:
        case MQL4Parser.Date:
        case MQL4Parser.Char:
            localctx = new ExpressionOperationContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 82;
            this.expression(0);
            this.state = 83;
            this.match(MQL4Parser.T__0);
            break;
        case MQL4Parser.T__5:
            localctx = new IfElseOperationContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 85;
            this.match(MQL4Parser.T__5);
            this.state = 86;
            this.match(MQL4Parser.T__6);
            this.state = 87;
            localctx.condition = this.expression(0);
            this.state = 88;
            this.match(MQL4Parser.T__7);
            this.state = 89;
            localctx.opTrue = this.operation();
            this.state = 92;
            var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
            if(la_===1) {
                this.state = 90;
                this.match(MQL4Parser.T__8);
                this.state = 91;
                localctx.opFalse = this.operation();
